# llvm-project-mlir

cmake/: llvm-project.cmake
mlir/: CMakeLists.txt
mlir/cmake/modules/: AddMLIR.cmake
mlir/include/mlir/: InitRocMLIRPasses.h
mlir/include/mlir-c/Dialect/: MIGraphX.h
mlir/include/mlir/Conversion/: MIOpenPasses.h  MIOpenPasses.td
mlir/lib/CAPI/Dialect/: CMakeLists.txt  MIGraphX.cpp
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Conversion/GPUToMIGraphX/: CMakeLists.txt  GPUToMIGraphX.cpp  GPUToMIGraphXPass.cpp
mlir/lib/Conversion/MIGraphXToTosa/: MIGraphXToTosa.cpp  MIGraphXToTosa.td  MIGraphXToTosaPass.cpp
mlir/lib/Conversion/RockToGPU/: RockToGPU.cpp
mlir/lib/Conversion/TosaToMIOpen/: TosaToMIOpen.cpp  TosaToMIOpenPass.cpp
mlir/lib/Conversion/TosaToRock/: TosaToRock.cpp
mlir/lib/Dialect/MIGraphX/: LowerMIGraphXOps.cpp
mlir/lib/Dialect/MIOpen/: CoordTransformBuilder.cpp
mlir/test/: CMakeLists.txt
mlir/test/CAPI/: CMakeLists.txt  mixr_cobj.cpp  mixr_full.c  mixrir.c
mlir/test/fusion/: multi-collapse-expand-chains.mlir  tosa-to-rock-gemm-reshape-add.mlir  tosa-to-rock-tp-add-tp.mlir  tosa-to-rock-tp-add.mlir
mlir/test/rocmlir-gen/: tosa-conv.cpu.mlir
mlir/test/xmir/: mobilenetv1.small.mlir
mlir/tools/: CMakeLists.txt
mlir/tools/miopen-gen/: miopen-gen.cpp
mlir/tools/miopen-opt/: miopen-opt.cpp
mlir/tools/mlir-mixr-opt/: CMakeLists.txt  mlir-mixr-opt.cpp
mlir/tools/mlir-translate/: CMakeLists.txt
mlir/tools/rocmlir-gen/: rocmlir-gen.cpp
mlir/tools/xmir-runner/: xmir-runner.cpp
mlir/utils/jenkins/: Jenkinsfile
(+94 files in other folders)
